# aurmpd

./: CMakeLists.txt  README.md
aurial/: .gitignore  package.json
aurial/src/: index.html  webpack.dev.config.js  webpack.dist.config.js
aurial/src/css/: default.css
aurial/src/js/: index.js  subsonic.js
aurial/src/js/jsx/: app.js  browser_bak.js  player.js  player_audio.js  player_mpd.js  playlist.js  queue.js  selection.js  settings.js  tracklist.js
cmake/: FindLibMPDClient.cmake
src/: album.cpp  album.hpp  config.h  config.h.in  http_server.cpp  http_server.hpp  jsontest.cpp  library.cpp  library.hpp  main.cpp  mpd_client.c  mpd_client.h  mpdqueue.cpp  mpdqueue.hpp  queue.cpp  queue.hpp  resource.rc  song.cpp  song.hpp  song_queue.cpp  song_queue.hpp  winmain.c  winpipe.cpp  winpipe.hpp
test/: README.TXT
